# nirvana2vcf

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
nirvana2vcf/: _optional.py  cli.py  constants.py  mapper.py  models.py  parser.py  vcf_writer.py
tests/: conftest.py  test_cli.py  test_edge_cases.py  test_integration.py  test_mapper.py  test_parser.py  test_real_data.py  test_vcf_writer.py
validation/docs/: strategy.md
validation/docs/fixes/: bcftools_contig_rename.md  gnomad_annotation.md  nirvana_banner.md  nirvana_block_compression.md  vcf_preprocessing.md  vep_snpeff_install.md
validation/docs/phases/: phase01.md  phase02.md  phase03.md  phase04.md  phase05.md
validation/results/: bcftools_stats_default.txt  bcftools_validation.txt  header_declaration_check.txt  variant_counts.txt  vcftools_validation.txt
validation/results/phase3/: bcftools_concordance.txt  decomposed_position_concordance.txt  default_position_concordance.txt  no_samples_position_concordance.txt  raw_position_concordance.txt  raw_sites.tsv  summary.txt
validation/results/phase4/: csq_only_annotation_concordance.txt  default_annotation_concordance.txt  no_samples_annotation_concordance.txt  raw_annotation_concordance.txt  summary.txt
validation/results/phase5/: concordance_matrix.txt  gnomad_dbsnp_comparison.txt  snpeff_comparison.txt  summary.txt  vep_comparison.txt
validation/scripts/: build_block_compression.sh  compare_annotations.py  compare_gnomad_dbsnp.py  compare_positions.py  compare_snpeff.py  compare_vep.py  run_phase1.sh  run_phase2.sh  run_phase3.sh  run_phase4.sh  run_phase5.sh
